force-app/main/default/objects/Product2/fields/Book_Author__c.field-meta.xml
<CustomField>
    <fullName>Book_Author__c</fullName>
    <label>Book_Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>