force-app/main/default/objects/Product2/fields/Book_Cover_c__c.field-meta.xml
<CustomField>
    <fullName>Book_Cover_c__c</fullName>
    <label>Book_Cover__c</label>
    <type>Url</type>
</CustomField>