force-app/main/default/objects/Product2/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <formula>IMAGE(Book_Cover_c__c , Name, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover</label>
    <type>Text</type>
</CustomField>