force-app/main/default/objects/Product2/recordTypes/Books_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Books_Record_Type</fullName>
    <active>true</active>
    <label>Books Record Type</label>
</RecordType>