force-app/main/default/objects/Product2/listViews/Book_List.listView-meta.xml
<ListView>
    <fullName>Book_List</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Book_Author__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Books_Record_Type</value>
    </filters>
    <label>Book List</label>
</ListView>